@@ -1,5 +1,5 @@
 # Process this file with autoconf to produce a configure script.
-# $Id: configure.ac,v 1.115 2012-04-19 21:14:43 pertusus Exp $
+# $Id: configure.ac,v 1.116 2012-06-11 17:54:26 karl Exp $
 #
 # This file is free software; as a special exception the author gives
 # unlimited permission to copy and/or distribute it, with or without
@@ -313,7 +313,6 @@ AC_CONFIG_FILES([\
   info/Makefile
   install-info/Makefile
   install-info/tests/Makefile
-  lib/Makefile
   man/Makefile
   po/Makefile.in
   po_document/Makefile.in
